--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hope's BLOG
+title: Hope's Blog
 subtitle: 低头努力，剩下交给时光
-description: 
-author: Hope
+description: 李颖琨的网络日志
+author: 李颖琨
 language: zh-CN
 timezone:
 
