--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://ygxdxx.coding.me
+url: http://blog.ygxdxx.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults: 低头努力，剩下交给时光
